<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".moduloAdm.primerIngreso.altaLiga.AltaLigaActivity"
    android:layout_marginLeft="@dimen/common_margen_mediano"
    android:layout_marginRight="@dimen/common_margen_mediano">

    <ScrollView
        android:id="@+id/sVMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/contentMain">

            <TextView
                android:id="@+id/tvTitulo"
                style="@style/tituloPantalla"
                android:text="@string/alta_liga_titulo"
                android:layout_marginTop="@dimen/common_margen_titulos"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgFoto"
                android:layout_width="@dimen/nuevo_jugador_alto_img"
                android:layout_height="@dimen/nuevo_jugador_alto_img"
                android:layout_marginTop="@dimen/common_margen_chiquito"
                app:srcCompat="@drawable/trofeo_2"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/llBotones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/common_margen_chiquito">

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/AppTheme.ImageViewButton"
                    android:id="@+id/imgBorrarFoto"
                    android:src="@drawable/ic_tache"/>
                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/AppTheme.ImageViewButton"
                    android:id="@+id/imgDesdeGaleria"
                    android:src="@drawable/ic_upload"/>
            </LinearLayout>

            <View style="@style/separador"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:gravity="center"
                    android:hint="@string/alta_liga_nombre"
                    android:inputType="textPersonName"
                    android:maxLength="@integer/maxLongitud_nombre" />
            </com.google.android.material.textfield.TextInputLayout>

            <View style="@style/separador"/>

            <TextView
                android:id="@+id/tvGenero"
                style="@style/labelSpinner"
                android:text="@string/common_genero"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/common_margen_chiquito"/>

            <Spinner
                android:id="@+id/spGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/generos"
                android:textAlignment="center"/>

            <View style="@style/separador"/>

            <TextView
                android:id="@+id/tvTipoTorneo"
                style="@style/labelSpinner"
                android:text="@string/alta_liga_tipo_torneo"
                android:layout_marginTop="@dimen/common_margen_chiquito"/>

            <Spinner
                android:id="@+id/spTipoTorneo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/generos"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tvDescTipoTorneo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alta_liga_tipo_torneo"
                android:layout_marginTop="@dimen/common_margen_chiquito"
                android:visibility="gone"/>

            <View style="@style/separador"/>

            <CheckBox
                android:id="@+id/cbLimJugadores"
                android:text="@string/alta_liga_hay_limite_jugadores"
                android:layout_marginTop="@dimen/common_margen_chiquito"
                style="@style/checkboxDerecha"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlLimJugadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margen_chiquito">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLimJugadores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:gravity="center"
                    android:hint="@string/alta_liga_cantidad_jugadores"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/tvDias"
                style="@style/labelSpinner"
                android:text="@string/common_dias"
                android:layout_marginTop="@dimen/common_margen_chiquito"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                />

            <CheckBox
                android:id="@+id/cbLunes"
                android:text="@string/common_lunes"
                style="@style/checkboxDerecha"/>

            <CheckBox
                android:id="@+id/cbMartes"
                android:text="@string/common_martes"
                style="@style/checkboxDerecha"/>

            <CheckBox
                android:id="@+id/cbMiercoles"
                android:text="@string/common_miercoles"
                style="@style/checkboxDerecha"/>

            <CheckBox
                android:id="@+id/cbJueves"
                android:text="@string/common_jueves"
                style="@style/checkboxDerecha"/>

            <CheckBox
                android:id="@+id/cbViernes"
                android:text="@string/common_viernes"
                style="@style/checkboxDerecha"/>

            <CheckBox
                android:id="@+id/cbSabado"
                android:text="@string/common_sabado"
                style="@style/checkboxDerecha"/>

            <CheckBox
                android:id="@+id/cbDomingo"
                android:text="@string/common_domingo"
                style="@style/checkboxDerecha"/>

            <View style="@style/separador"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEquiposCalifican"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margen_chiquito">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEquiposCalifican"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:gravity="center"
                    android:hint="@string/alta_liga_equipos_califican"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View style="@style/separador"/>

            <CheckBox
                android:id="@+id/cbRepechaje"
                android:text="@string/alta_liga_cb_repechaje"
                android:layout_marginTop="@dimen/common_margen_chiquito"
                style="@style/checkboxDerecha"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlRepechaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margen_chiquito"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRepechaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:gravity="center"
                    android:hint="@string/alta_liga_equipos_repechaje"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <View style="@style/separador"/>

            <CheckBox
                android:id="@+id/cbEmpatePuntoExtra"
                android:text="@string/alta_liga_empate_pt_extra"
                android:layout_marginTop="@dimen/common_margen_chiquito"
                style="@style/checkboxDerecha"/>

            <Button
                android:id="@+id/btnGuardar"
                style="@style/botonGuardar"
                android:text="@string/common_guardar"
                android:layout_marginTop="@dimen/common_margen_chiquito"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>